5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1724_2526.log
== TEST (2019-05-13 16:54:18) 
-- CODE:
n=int(input())
m=int(input())
i=0
j=0
k=o
while(i<n):
	i=i+1
	if(n%i==0 and n!=i):
		j=j+i
while(k<m):
	k=k+1
	if(m%k==0 and m!=k):
		l=l+k
if(l==n and m==j):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    k=o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 16:55:03) 
-- CODE:
n=int(input())
m=int(input())
i=0
j=0
k=o
while(i<n):
	i=i+1
	if(n%i==0 and n!=i):
		j=j+i
print(i)
while(k<m):
	k=k+1
	if(m%k==0 and m!=k):
		l=l+k
print(l)
if(l==n and m==j):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    k=o
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 16:55:40) 
-- CODE:
n=int(input())
m=int(input())
i=0
j=0
k=0
l=0
while(i<n):
	i=i+1
	if(n%i==0 and n!=i):
		j=j+i
print(i)
while(k<m):
	k=k+1
	if(m%k==0 and m!=k):
		l=l+k
print(l)
if(l==n and m==j):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2620
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 16:56:25) 
-- CODE:
n=int(input())
m=int(input())
i=0
j=0
k=0
l=0
while(i<n):
	i=i+1
	if(n%i==0 and n!=i):
		j=j+i
print(j)
while(k<m):
	k=k+1
	if(m%k==0 and m!=k):
		l=l+k
print(l)
if(l==n and m==j):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
0.12775
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
2924
2620
AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
284
294
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
66992
66928
AMIGOS
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
